21º Commit: Creadas rutas a todas las tablas solo opcion getNombreTabla, modificado el metodo de registro de rol con valor por defecto a 3 y en las rutas de administrador solo es posible asignar valores 2 o 3. Rol_id a 1 = Administrador solo modificable desde backend BBDD. Compos de registro provincia y ciudad required en el registro en AuthController, en UserController siguen nullable. Rutas GET /users y user sin token para uso de la app-Angular. Actualizada documentación.
